# optimizacao_dataframes

./: pyproject.toml  setup.py
caminhos/: paths.py
dados_tests/: dados_1.csv
modulos/: coleta_amostra.py  optimizacao_dataframe.py
optimizacaoDF/: analise_resultados.py  coleta_amostra.py  gera_testes.py  optimizacao_dataframe.py
optimizacaoDF/caminhos/: paths.py
tests/: test_amostragem.py  test_optimizacao.py
tests/caminhos/: paths.py
